--- a/_site.yml
+++ b/_site.yml
@@ -3,7 +3,7 @@ output_dir: "."
 navbar:
   title: "Home"
   left: 
-    - text: "About"
+    - text: "Resume"
       href: about.html
   right:
     - icon: fa-envelope fa-lg
