--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   left: 
     - text: "Resume"
       href: about.html
+    - text: "Dashboard"
+      href: dashboard.html
   right:
     - icon: fa-envelope fa-lg
       href: mailto:<johsuan.lee@columbia.edu>
